[WIP] Updated to new name conventions

--- a/view/_document.html
+++ b/view/_document.html
@@ -51,11 +51,13 @@
             <script src="/core/app.js"></script>
             <script src="/core/router.js"></script>
             <script src="/core/layout.js"></script>
-            <script src="/utils/loader.js"></script>
 
             <!-- Services -->
-            <script src="/services/RuntimeManagerRepository.js"></script>
-            <script src="/services/DataObjectAccessController.js"></script>
+            <script src="/services/repository.service.js"></script>
+            <script src="/services/dao.service.js"></script>
+
+            <!-- Utils -->
+            <script src="/utils/loader.util.js"></script>
 
             <!-- Components -->
 
