Created money util

--- a/view/_document.html
+++ b/view/_document.html
@@ -58,6 +58,7 @@
 
             <!-- Utils -->
             <script src="/utils/loader.util.js"></script>
+            <script src="/utils/money.util.js"></script>
 
             <!-- Components -->
 
