--- a/view/_document.html
+++ b/view/_document.html
@@ -23,6 +23,7 @@
                 @import "/vendor/css/bootstrap.min.css";
                 @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css";
                 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css";
+                @import "/assets/styles/main.css";
             </style>
 
             <div ng-app="app">
