--- a/view/_document.html
+++ b/view/_document.html
@@ -64,6 +64,7 @@
             <!-- Components -->
 
             <!-- Controllers -->
+            <script src="/controllers/exemplo.controller.js"></script>
         </template>
     </body>
 </html>
