--- a/view/_document.html
+++ b/view/_document.html
@@ -1,70 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <title>Boilerplate Projeto</title>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="/assets/images/favicon.ico"
-        />
-        <link rel="stylesheet" href="/vendor/css/bootstrap.min.css" />
+  <head>
+    <title>Boilerplate Projeto</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
+    <link rel="stylesheet" href="/vendor/css/bootstrap.min.css" />
 
-        <!-- Vendors / Terceiros -->
-        <script src="/vendor/js/jquery.min.js"></script>
-        <script src="/vendor/js/angular.min.js"></script>
-    </head>
+    <!-- Vendors / Terceiros -->
+    <script src="/vendor/js/jquery.min.js"></script>
+    <script src="/vendor/js/angular.min.js"></script>
+  </head>
 
-    <body>
-        <template shadowrootmode="open" id="template">
-            <style>
-                @import "/vendor/css/bootstrap.min.css";
-                @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css";
-                @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css";
-                @import "/assets/styles/main.css";
-            </style>
+  <body>
+    <template shadowrootmode="open" id="template">
+      <style>
+        @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css";
+        @import "/assets/styles/main.css";
+      </style>
 
-            <div ng-app="app">
-                <layout></layout>
-            </div>
+      <div ng-app="app">
+        <layout></layout>
+      </div>
 
-            <!-- Vendors -->
-            <script src="/vendor/js/jquery.min.js"></script>
-            <script src="/vendor/js/bootstrap.bundle.min.js"></script>
-            <script src="/vendor/js/angular-route.js"></script>
-            <script src="/vendor/js/angular-animate.js"></script>
-            <script src="/vendor/js/angular-sanitize.js"></script>
-            <script src="/vendor/js/angular-masks.js"></script>
-            <script src="/vendor/js/ui-router.min.js"></script>
-            <script src="/vendor/js/jquery.mask.min.js"></script>
-            <script src="/vendor/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
-            <script src="/vendor/js/sweetalert2011.js"></script>
-            <script
-                src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
-                integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
-                crossorigin="anonymous"
-                referrerpolicy="no-referrer"
-            ></script>
+      <!-- Vendors -->
+      <script src="/vendor/js/jquery.min.js"></script>
+      <script src="/vendor/js/angular-route.js"></script>
+      <script src="/vendor/js/angular-animate.js"></script>
+      <script src="/vendor/js/angular-sanitize.js"></script>
+      <script src="/vendor/js/angular-masks.js"></script>
+      <script src="/vendor/js/ui-router.min.js"></script>
+      <script src="/vendor/js/jquery.mask.min.js"></script>
+      <script src="/vendor/js/sweetalert2011.js"></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
+        integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
 
-            <!-- Core -->
-            <script src="/core/app.js"></script>
-            <script src="/core/router.js"></script>
-            <script src="/core/layout.js"></script>
+      <!-- Core -->
+      <script src="/core/app.js"></script>
+      <script src="/core/router.js"></script>
+      <script src="/core/layout.js"></script>
 
-            <!-- Services -->
-            <script src="/services/repository.service.js"></script>
-            <script src="/services/dao.service.js"></script>
+      <!-- Services -->
+      <script src="/services/repository.service.js"></script>
+      <script src="/services/dao.service.js"></script>
 
-            <!-- Utils -->
-            <script src="/utils/loader.util.js"></script>
-            <script src="/utils/money.util.js"></script>
+      <!-- Utils -->
+      <script src="/utils/loader.util.js"></script>
+      <script src="/utils/money.util.js"></script>
 
-            <!-- Components -->
+      <!-- Components -->
 
-            <!-- Controllers -->
-            <script src="/controllers/exemplo.controller.js"></script>
-        </template>
-    </body>
+      <!-- Controllers -->
+      <script src="/controllers/exemplo.controller.js"></script>
+    </template>
+  </body>
 </html>
