--- a/view/_document.html
+++ b/view/_document.html
@@ -10,64 +10,59 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="/vendor/css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="/vendor/css/bootstrap.min.css" />
 
     <!-- Vendors / Terceiros -->
     <script src="/vendor/js/jquery.min.js"></script>
     <script src="/vendor/js/angular.min.js"></script>
   </head>
 
-  <body>
-    <template shadowrootmode="open" id="template">
-      <style>
-        @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css";
-        @import "/assets/styles/main.css";
-      </style>
+  <body ng-app="app">
+    <layout></layout>
 
-      <div ng-app="app">
-        <cit-smart-frame>
-          <layout></layout>
-        </cit-smart-frame>
-      </div>
+    <!-- Vendors -->
+    <script src="/vendor/js/jquery.min.js"></script>
+    <!-- <script src="/vendor/js/bootstrap.bundle.min.js"></script> -->
+    <script src="/vendor/js/angular-route.js"></script>
+    <script src="/vendor/js/angular-animate.js"></script>
+    <script src="/vendor/js/angular-sanitize.js"></script>
+    <script src="/vendor/js/angular-masks.js"></script>
+    <script src="/vendor/js/ui-router.min.js"></script>
+    <script src="/vendor/js/jquery.mask.min.js"></script>
+    <!-- <script src="/vendor/js/ui-bootstrap-tpls-2.5.0.min.js"></script> -->
+    <script src="/vendor/js/sweetalert2011.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
+      integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
-      <!-- Vendors -->
-      <script src="/vendor/js/jquery.min.js"></script>
-      <script src="/vendor/js/angular-route.js"></script>
-      <script src="/vendor/js/angular-animate.js"></script>
-      <script src="/vendor/js/angular-sanitize.js"></script>
-      <script src="/vendor/js/angular-masks.js"></script>
-      <script src="/vendor/js/ui-router.min.js"></script>
-      <script src="/vendor/js/jquery.mask.min.js"></script>
-      <script src="/vendor/js/sweetalert2011.js"></script>
-      <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
-        integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      ></script>
+    <!-- Core -->
+    <script src="/core/app.js"></script>
+    <script src="/core/cit-smart-frame.js"></script>
+    <script src="/core/layout.js"></script>
 
-      <!-- Core -->
-      <script src="/core/app.js"></script>
-      <script src="/core/cit-smart-frame.js"></script>
-      <script src="/core/layout.js"></script>
+    <!-- Routers -->
+    <script src="/core/router.js"></script>
 
-      <!-- Routers -->
-      <script src="/core/router.js"></script>
+    <!-- Services -->
+    <script src="/services/repository.service.js"></script>
+    <script src="/services/dao.service.js"></script>
 
-      <!-- Services -->
-      <script src="/services/repository.service.js"></script>
-      <script src="/services/dao.service.js"></script>
+    <!-- Utils -->
+    <script src="/utils/cit-menu.util.js"></script>
+    <script src="/utils/loader.util.js"></script>
+    <script src="/utils/money.util.js"></script>
 
-      <!-- Utils -->
-      <script src="/utils/cit-menu.util.js"></script>
-      <script src="/utils/loader.util.js"></script>
-      <script src="/utils/money.util.js"></script>
+    <!-- Services -->
+    <script src="/services/repository.service.js"></script>
+    <script src="/services/dao.service.js"></script>
 
-      <!-- Components -->
+    <!-- Components -->
 
-      <!-- Controllers -->
-      <script src="/controllers/menu.controller.js"></script>
-      <script src="/controllers/exemplo.controller.js"></script>
-    </template>
+    <!-- Controllers -->
+    <script src="/controllers/menu.controller.js"></script>
+    <script src="/controllers/exemplo.controller.js"></script>
   </body>
 </html>
