--- a/view/layout/layout.html
+++ b/view/layout/layout.html
@@ -1,10 +1,23 @@
-<div id="layout-wrapper">
-  <ng-include src="'/layout/header.html'"></ng-include>
+<div shadow-template>
+  <style>
+    /* @import "/vendor/css/bootstrap.min.css"; */
+    /* @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"; */
+    @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css";
+    @import "/assets/styles/tw-globals.css";
+  </style>
 
-  <div id="layout-content">
-    <!-- Sua página definida em router será renderizada aqui -->
-    <ui-view></ui-view>
-  </div>
+  <cit-smart-frame>
+    <div id="layout-wrapper">
+      <ng-include src="'/layout/header.html'"></ng-include>
 
-  <ng-include src="'/layout/footer.html'"></ng-include>
+      <div id="layout-content">
+        <!-- Sua página definida em router será renderizada aqui -->
+        <ui-view></ui-view>
+      </div>
+
+      <ng-include src="'/layout/footer.html'"></ng-include>
+    </div>
+  </cit-smart-frame>
 </div>
+
+<div shadow-angular-app></div>
