Renomeado arquivos para CITSmart e finalizado plugins esbuild css/js

--- a/view/_document.html
+++ b/view/_document.html
@@ -46,23 +46,19 @@
     <!-- Routers -->
     <script src="/core/router.js"></script>
 
-    <!-- Services -->
-    <script src="/services/repository.service.js"></script>
-    <script src="/services/dao.service.js"></script>
-
     <!-- Utils -->
-    <script src="/utils/cit-menu.util.js"></script>
-    <script src="/utils/loader.util.js"></script>
-    <script src="/utils/money.util.js"></script>
+    <script src="/utils/cit-menuUtil.js"></script>
+    <script src="/utils/loaderUtil.js"></script>
+    <script src="/utils/moneyUtil.js"></script>
 
     <!-- Services -->
-    <script src="/services/repository.service.js"></script>
-    <script src="/services/dao.service.js"></script>
+    <script src="/services/repositoryService.js"></script>
+    <script src="/services/daoService.js"></script>
 
     <!-- Components -->
 
     <!-- Controllers -->
-    <script src="/controllers/menu.controller.js"></script>
-    <script src="/controllers/exemplo.controller.js"></script>
+    <script src="/controllers/menuController.js"></script>
+    <script src="/controllers/exemploController.js"></script>
   </body>
 </html>
