Adicionado normalização de font-size para rems

--- a/view/assets/styles/globals.css
+++ b/view/assets/styles/globals.css
@@ -1,3 +1,8 @@
+html,
+:host {
+  font-size: 62.5%;
+}
+
 .material-symbols-outlined {
   font-family: "Material Symbols Outlined";
   font-weight: normal;
