--- a/web/src/components/layout/template.html
+++ b/web/src/components/layout/template.html
@@ -3,19 +3,19 @@
     /* @import "/vendor/css/bootstrap.min.css"; */
     /* @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"; */
     @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css";
-    @import "/assets/styles/tw-globals.css";
+    @import "/bundle.min.css";
   </style>
 
   <cit-smart-frame>
     <div id="layout-wrapper">
-      <ng-include src="'/layout/header.html'"></ng-include>
+      <ng-include src="'/html/layout/header.html'"></ng-include>
 
       <div id="layout-content">
         <!-- Sua página definida em router será renderizada aqui -->
         <ui-view></ui-view>
       </div>
 
-      <ng-include src="'/layout/footer.html'"></ng-include>
+      <ng-include src="'/html/layout/footer.html'"></ng-include>
     </div>
   </cit-smart-frame>
 </div>
